<resources>
    <string name="app_name">Simple Quiz</string>
    <string name="question_text">Текст вопроса: придумать</string>
    <string name="first_answer_text"> </string>
    <string name="second_answer_text"> </string>
    <string name="correct_toast">Вы ответили верно</string>
    <string name="incorrect_toast">Вы ответили не верно. Игра завершена!</string>
    <string name="already_answered_toast">Вы уже отвечали</string>
    <string name="next_button">Следующий</string>
    <string name="start_button">Начать игру</string>
    <string name="title_app">Вопросы от географа</string>
    <string name="first_need_answer">Ответьте на вопрос</string>
    <string name="return_button_text">Предыдущий</string>
    <string name="next_question">Next question</string>
    <string name="last_item">last item</string>
    <string name="start_over">Начать заново</string>
    <string name="show_answer_correct">Правильный ответ: правда</string>
    <string name="show_answer_incorrect">Правильный ответ: не правда</string>
    <string name="text_result_title">Результаты игры:</string>
    <string name="text_score">Правильных ответов: %1$d.</string>
    <string name="text_result_score">Правильных ответов: %1$d из %2$d.</string>
    <string name="text_num_of_questions">Осталось %1$d вопросов из %2$d.</string>
    <string name="third_answer_text" />
    <string name="fourth_answer_text" />
    <string name="activity_main_title">Настройка игры:</string>
    <string name="text_set_num_question">Количество\nвопросов</string>
    <string name="num_question_text_main">Выберите</string>
    <string name="hard_mode_title_main">Сложный\nрежим</string>
    <string name="hard_mode_title_dialog_main">Сложный режим</string>
    <string name="timer_mode_title_dialog_main">Таймер</string>
    <string name="hard_mode_dialog_message_main">Режим игры, при котором, в случае неправильного ответа - игра заканчивается!</string>
    <string name="timer_mode_dialog_message_main">Режим игры, при котором устанавливается таймер, в течение которого надо ответить на вопрос. В случае окончания таймера, ответ считаеся неправильным, и игра переходит к следующему вопросу. А в сложном режиме - игра заканчивается.\n\nПри включении опции, можно выбрать кол-во секунд для таймера</string>
    <string name="timer_mode_title">Включить\nтаймер</string>
    <string name="show_answer_text">Позать ответы</string>

    <string-array name="NumQuestionsSpinner">
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <string-array name="TimerModeSpinnerArray">
        <item>60</item>
        <item>30</item>
        <item>20</item>
        <item>10</item>
        <item>5</item>
    </string-array>
</resources>