<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundPrimary"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundPrimary">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_button_start_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="@color/colorPrimary"
            android:contentDescription="Open menu for New game"
            android:focusable="true"
            android:theme="@style/Widget.Design.FloatingActionButton"
            android:backgroundTint="@color/colorPrimary"
            android:tintMode="multiply"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/score_board_textView"
            app:layout_constraintStart_toStartOf="@+id/question_text_view"
            app:layout_constraintTop_toTopOf="@+id/questions_numbers"
            app:srcCompat="@drawable/ic_baseline_floating_button_start_over"
            tools:ignore="HardcodedText"
            />

        <Button
            android:id="@+id/start_over"
            android:layout_width="180dp"
            android:layout_marginStart="8dp"
            android:layout_height="0dp"
            android:gravity="center"

            android:onClick="starOverButtonClick"
            android:text="@string/start_over"
            tools:visibility="visible"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/floating_button_start_over"
            app:layout_constraintTop_toTopOf="@id/questions_numbers"
            app:layout_constraintBottom_toBottomOf="@id/score_board_textView"
            />

        <TextView
            android:id="@+id/questions_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@color/backgroundPrimary"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Осталось вопросов" />

        <TextView
            android:id="@+id/score_board_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:background="@color/backgroundPrimary"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/question_text_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/question_text_view"
            app:layout_constraintTop_toBottomOf="@id/questions_numbers"
            tools:text="Временный текст" />

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:background="@color/question_view_background_color"
            android:gravity="center"
            android:padding="24dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_board_textView"
            tools:text="@tools:sample/lorem/random" />

        <ProgressBar
            android:id="@+id/timer_progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"

            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:progress="0"
            android:progressDrawable="@drawable/progress_bar_style_ver2"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/question_text_view"
            app:layout_constraintStart_toStartOf="@id/question_text_view"
            app:layout_constraintTop_toBottomOf="@id/question_text_view" />

        <TextView
            android:id="@+id/timer_countdown_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/timer_progressBar"
            app:layout_constraintEnd_toEndOf="@+id/timer_progressBar"
            app:layout_constraintStart_toStartOf="@+id/timer_progressBar"
            app:layout_constraintTop_toTopOf="@+id/timer_progressBar"
            tools:text="10" />

        <Button
            android:id="@+id/first_answer_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="22dp"
            android:text="@string/first_answer_text"
            app:layout_constraintEnd_toStartOf="@+id/start_game_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_progressBar"
            tools:text="Answer" />

        <Button
            android:id="@+id/start_game_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/second_answer_text"
            app:layout_constraintBottom_toBottomOf="@id/first_answer_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/first_answer_button"
            app:layout_constraintTop_toTopOf="@+id/first_answer_button"
            tools:text="Answer" />

        <Button
            android:id="@+id/third_answer_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/third_answer_text"
            app:layout_constraintEnd_toEndOf="@+id/first_answer_button"
            app:layout_constraintStart_toStartOf="@+id/first_answer_button"
            app:layout_constraintTop_toBottomOf="@+id/first_answer_button"
            tools:text="Answer\nasd" />

        <Button
            android:id="@+id/fourth_answer_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:text="@string/fourth_answer_text"
            app:layout_constraintBottom_toBottomOf="@id/third_answer_button"
            app:layout_constraintEnd_toEndOf="@id/start_game_button"
            app:layout_constraintStart_toEndOf="@+id/third_answer_button"
            app:layout_constraintTop_toTopOf="@+id/third_answer_button"
            tools:text="Answer" />

        <Button
            android:id="@+id/show_answers_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:onClick="showAnswersButtonClick"
            android:text="@string/show_answer_text"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/question_text_view"
            app:layout_constraintStart_toStartOf="@+id/question_text_view"
            app:layout_constraintTop_toBottomOf="@id/question_text_view"
            tools:text="Show answers" />


        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/next_question"
            android:drawablePadding="10dp"
            android:src="@mipmap/ic_next_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourth_answer_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>